--- a/index.html
+++ b/index.html
@@ -10,70 +10,80 @@
 
  <body>
 
-     <div>
+     <center>
          <ul class="menu">
-             <li class="links">Home</li>
-             <li class="links">Dance Video</li>
-             <li class="links">Dance Style</li>
-             <li class="links">Inspiration</li>
-             <li class="links">Contacts</li>
+             <li class="links"><a href="#HOME">HOME</a></li>
+             <li class="links"><a href="#DANCE VIDEO"> DANCE VIDEOS</a></li>
+             <li class="links"><a href="#DANCE STYLE">DANCE STYLE</a></li>
+             <li class="links"><a href="#INSPIRATION">INSPIRATION</a></li>
+             <li class="links"><a href="#contact">CONTACTS</a></li>
+
          </ul>
-     </div>
+
+     </center>
 
      <div>
          <section>
 
-             <img id="blah src=" https://images.unsplash.com/photo-1620352469921-14937536ea67?crop <h1> My Favourite Hobby </h1>
+
+             <h1> My Favourite Hobby </h1>
              <br> <span id="name">Dance
              </span>
+         </section>
      </div>
 
-     </section>
-     <section id="bio">
-         <h1></h1>
-         <div class"line"></div>
-         <p>My favorite hobby is dancing.
+     <section id="HOME">
+         <div class="blah">
+             <img src="dancer-completed-01.png" class="Blah" />
+             <h1></h1>
+             <div class"line"></div>
+             <p>My favorite hobby is dancing.
+                 Dancing is an activity for our pleasure or entertainment for others.It gives me joy and happiness.I am well aware that dancing is a very good habit.
 
-             Dancing is an activity for our pleasure or entertainment for others.It gives me joy and happiness.I am well aware that dancing is a very good habit.
+                 I have benefited a lot from the hobby of dancing.Dancing is one of the best exercises for our body.It relaxes our minds.It improves the condition of the heart and lungs.Dancing increases my strength and energy.It is very important for my weight management. These days many people, irrespective of their ages, indulge in dancing. Dancing requires a lot of patience and practice. Dancing is my way to escape the cruelties of the world. These days many people irrespective of their age do dancing.
+                 Thank you </p>
 
-             I have benefited a lot from the hobby of dancing.Dancing is one of the best exercises for our body.It relaxes our minds.It improves the condition of the heart and lungs.Dancing increases my strength and energy.It is very important for my weight management. These days many people, irrespective of their ages, indulge in dancing. Dancing requires a lot of patience and practice. Dancing is my way to escape the cruelties of the world. These days many people irrespective of their age do dancing.
-             Thank you </p>
-         <br> <span id="name">Dance
-         </span>
-         </div>
+             <section id="DANCE VIDEO">
+                 <h1>Videos</h1>
+                 <div class="line"></div>
+                 <br>
+                 <iframe width="900" height="500" src="https://www.youtube.com/embed/Glw__yfBr8E" frameborder="0"></iframe>
 
-     </section>
-     <section id="bio">
-         <h1></h1>
-         <div class"line"></div>
-         <p>My favorite hobby is dancing.
-
-         <section id="Dance Video">
-             <h1>Videos</h1>
-             <div class="line"></div>
-             <br>
-             <iframe width="900" height="500" src="https://www.youtube.com/embed/Glw__yfBr8E" frameborder="0"></iframe>
-
-
-         </section>
-         <section id="Dance Style">
-             <h1>Styles</h1>
-             <div class="line"></div>
-             <iframe width="900" height="1000" src="https://en.wikipedia.org/wiki/Dance" frameborder="0"></iframe>
-
-         </section>
-         <section id="Inspiration">
-             <h1>My Inspiration Shakti Mohan</h1>
-             <div class="line"></div>
-             <iframe width="560" height="315" href=https://en.wikipedia.org/wiki/Shakti_Mohan>
-                 .</iframe>
-
-             <section id="Contacts">
-                 <h2> Contact </h2>
-                 <h2> 8920922142, 8447435021</h2>
-                 .
 
              </section>
+             <section id="DANCE STYLE">
+                 <h1>Styles</h1>
+                 <div class="line"></div>
+                 <iframe width="900" height="1000" src="https://en.wikipedia.org/wiki/Dance" frameborder="0"></iframe>
+
+             </section>
+             <section id="INSPIRATION">
+                 <h1>My Inspiration Shakti Mohan</h1>
+                 <div class="line"></div>
+                 <iframe width="900" height="500" src=" https://en.wikipedia.org/wiki/Shakti_Mohan" frameborder="0"></iframe>
+
+             </section>
+             <section id="contact">
+
+                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15078.353856082635!2d72.8906491!3d19.1257017!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xacf72f56793d190a!2sWHITEHAT%20EDUCATION%20TECHNOLOGY%20PVT%20LTD!5e0!3m2!1sen!2sin!4v1573468987088!5m2!1sen!2sin" height="450" frameborder="0" allowfullscreen=""></iframe>
+
+                 <div class="contact_1">
+
+                     <a href="mailto:dasdilip75@gmail.com?Subject=Hello">
+                         <i class="fa fa-envelope"></i>&nbsp;&nbsp;<h3>dasdilip75@gmail.com</h3>
+                     </a>
+
+                     <br>
+                     <br>
+
+                     <a href="#">
+                         <i class="fa fa-instagram"></i>&nbsp;&nbsp;<h3>myinstagramid</h3>
+                     </a>
+
+                 </div>
+
+             </section>
+
  </body>
 
  </html>
